--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,16 @@
                 <button type="submit" class="btn btn-info">Add Locality</button>
             </form>
         </div>
+        <div class="col-md-6" style="margin:10px">
+            <form action="/addaddresspage" method="POST">
+                <button type="submit" class="btn btn-info">Add Address</button>
+            </form>
+        </div>
+        <div class="col-md-6" style="margin:10px">
+            <form action="/addorderpage" method="POST">
+                <button type="submit" class="btn btn-info">Add Order</button>
+            </form>
+        </div>
     </div>
     
     
